simplify AbstractValidatorTest.java