@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright 2017 Philipp Salvisberg <philipp.salvisberg@trivadis.com>
  * 
  * Licensed under the Creative Commons Attribution-NonCommercial-NoDerivs 3.0
@@ -22,133 +22,107 @@ import com.trivadis.oracle.plsql.validation.PLSQLValidator;
 import com.trivadis.tvdcc.validators.TrivadisPlsqlNaming;
 import java.io.ByteArrayInputStream;
 import java.io.File;
+import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.List;
+
 import org.eclipse.emf.common.util.EList;
 import org.eclipse.emf.common.util.URI;
 import org.eclipse.emf.ecore.resource.Resource;
-import org.eclipse.xtend2.lib.StringConcatenation;
 import org.eclipse.xtext.resource.XtextResource;
 import org.eclipse.xtext.resource.XtextResourceSet;
 import org.eclipse.xtext.validation.CheckMode;
 import org.eclipse.xtext.validation.Issue;
-import org.eclipse.xtext.xbase.lib.Exceptions;
-import org.eclipse.xtext.xbase.lib.Functions.Function1;
-import org.eclipse.xtext.xbase.lib.IterableExtensions;
-import org.hamcrest.MatcherAssert;
-import org.hamcrest.core.AnyOf;
-import org.hamcrest.core.StringStartsWith;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
-@SuppressWarnings("all")
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.core.AnyOf.anyOf;
+import static org.hamcrest.core.StringStartsWith.startsWith;
+
 public abstract class AbstractValidatorTest {
     private static final String PROPERTIES_FILE_NAME = TrivadisPlsqlNaming.PROPERTIES_FILE_NAME;
-
     public static final String FULL_PROPERTIES_FILE_NAME = ((System.getProperty("user.home") + File.separator)
-            + AbstractValidatorTest.PROPERTIES_FILE_NAME);
+            + PROPERTIES_FILE_NAME);
+    private static final String FULL_PROPERTIES_FILE_NAME_BACKUP = (FULL_PROPERTIES_FILE_NAME + ".backup");
 
-    private static final String FULL_PROPERTIES_FILE_NAME_BACKUP = (AbstractValidatorTest.FULL_PROPERTIES_FILE_NAME
-            + ".backup");
-
-    private Injector injector = new PLSQLStandaloneSetup().createInjectorAndDoEMFRegistration();
+    private final Injector injector = new PLSQLStandaloneSetup().createInjectorAndDoEMFRegistration();
 
     @BeforeClass
     public static void commonSetup() {
-        AbstractValidatorTest.stashPropertiesFile();
+        stashPropertiesFile();
     }
 
     public static void stashPropertiesFile() {
         try {
-            boolean _exists = Files.exists(Paths.get(AbstractValidatorTest.FULL_PROPERTIES_FILE_NAME));
-            if (_exists) {
-                Files.copy(Paths.get(AbstractValidatorTest.FULL_PROPERTIES_FILE_NAME),
-                        Paths.get(AbstractValidatorTest.FULL_PROPERTIES_FILE_NAME_BACKUP));
-                Files.delete(Paths.get(AbstractValidatorTest.FULL_PROPERTIES_FILE_NAME));
+            final Path file = Path.of(FULL_PROPERTIES_FILE_NAME);
+            if (Files.exists(file)) {
+                Files.copy(file, Paths.get(FULL_PROPERTIES_FILE_NAME_BACKUP));
+                Files.delete(file);
             }
-        } catch (Throwable _e) {
-            throw Exceptions.sneakyThrow(_e);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
     }
 
     @AfterClass
     public static void restorePropertiesFile() {
         try {
-            boolean _exists = Files.exists(Paths.get(AbstractValidatorTest.FULL_PROPERTIES_FILE_NAME_BACKUP));
-            if (_exists) {
-                Files.copy(Paths.get(AbstractValidatorTest.FULL_PROPERTIES_FILE_NAME_BACKUP),
-                        Paths.get(AbstractValidatorTest.FULL_PROPERTIES_FILE_NAME),
-                        StandardCopyOption.REPLACE_EXISTING);
-                Files.delete(Paths.get(AbstractValidatorTest.FULL_PROPERTIES_FILE_NAME_BACKUP));
+            final Path original = Path.of(FULL_PROPERTIES_FILE_NAME_BACKUP);
+            final Path file = Path.of(FULL_PROPERTIES_FILE_NAME);
+            if (Files.exists(original)) {
+                Files.copy(original, file, StandardCopyOption.REPLACE_EXISTING);
+                Files.delete(original);
             } else {
-                boolean _exists_1 = Files.exists(Paths.get(AbstractValidatorTest.FULL_PROPERTIES_FILE_NAME));
-                if (_exists_1) {
-                    Files.delete(Paths.get(AbstractValidatorTest.FULL_PROPERTIES_FILE_NAME));
+                if (Files.exists(file)) {
+                    Files.delete(file);
                 }
             }
-        } catch (Throwable _e) {
-            throw Exceptions.sneakyThrow(_e);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
     }
 
     @Test
     public void guidelineTitleStartsWithKeyword() {
-        final Function1<PLSQLCopGuideline, Boolean> _function = (PLSQLCopGuideline it) -> {
-            Integer _id = it.getId();
-            return Boolean.valueOf(((_id).intValue() >= 9000));
-        };
-        final Iterable<PLSQLCopGuideline> guidelines = IterableExtensions
-                .<PLSQLCopGuideline>filter(this.getValidator().getGuidelines().values(), _function);
+        var guidelines = getValidator().getGuidelines().values().stream().filter(it -> it.getId() >= 9000).toList();
         for (final PLSQLCopGuideline g : guidelines) {
-            String _msg = g.getMsg();
-            String _plus = ("\"" + _msg);
-            String _plus_1 = (_plus + "\' does not start with keyword");
-            MatcherAssert.<String>assertThat(_plus_1, g.getMsg(),
-                    AnyOf.<String>anyOf(StringStartsWith.startsWith("Always"), StringStartsWith.startsWith("Never"),
-                            StringStartsWith.startsWith("Avoid"), StringStartsWith.startsWith("Try")));
+            assertThat('"' + g.getMsg() + "' does not start with keyword", g.getMsg(),
+                    anyOf(startsWith("Always"), startsWith("Never"), startsWith("Avoid"), startsWith("Try")));
         }
     }
 
-    public XtextResource parse(final String stmt) {
+    public XtextResource parse(String stmt) {
+        final XtextResourceSet resourceSet = injector.getInstance(XtextResourceSet.class);
+        resourceSet.addLoadOption(XtextResource.OPTION_RESOLVE_ALL, Boolean.TRUE);
+        resourceSet.addLoadOption(XtextResource.OPTION_ENCODING, Charset.defaultCharset().name());
+        final Resource resource = resourceSet.createResource(URI.createURI("dummy:/test.plsql"));
+        final ByteArrayInputStream input = new ByteArrayInputStream(stmt.getBytes());
         try {
-            final XtextResourceSet resourceSet = this.injector.<XtextResourceSet>getInstance(XtextResourceSet.class);
-            resourceSet.addLoadOption(XtextResource.OPTION_RESOLVE_ALL, Boolean.TRUE);
-            resourceSet.addLoadOption(XtextResource.OPTION_ENCODING, Charset.defaultCharset().name());
-            final Resource resource = resourceSet.createResource(URI.createURI("dummy:/test.plsql"));
-            byte[] _bytes = stmt.getBytes();
-            final ByteArrayInputStream input = new ByteArrayInputStream(_bytes);
             resource.load(input, resourceSet.getLoadOptions());
-            return ((XtextResource) resource);
-        } catch (Throwable _e) {
-            throw Exceptions.sneakyThrow(_e);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
+        return ((XtextResource) resource);
     }
 
-    public List<Issue> getIssues(final String stmt) {
-        final XtextResource resource = this.parse(stmt);
+    public List<Issue> getIssues(String stmt) {
+        final XtextResource resource = parse(stmt);
         final EList<Resource.Diagnostic> errors = resource.getErrors();
-        int _size = errors.size();
-        boolean _greaterThan = (_size > 0);
-        if (_greaterThan) {
+        if (errors.size() > 0) {
             final Resource.Diagnostic firstError = errors.get(0);
-            StringConcatenation _builder = new StringConcatenation();
-            _builder.append("Syntax error: ");
-            String _message = firstError.getMessage();
-            _builder.append(_message);
-            _builder.append(" at line ");
-            int _line = firstError.getLine();
-            _builder.append(_line);
-            _builder.append(".");
-            throw new RuntimeException(_builder.toString());
+            throw new RuntimeException(
+                    "Syntax error: " + firstError.getMessage() + " at line " + firstError.getLine() + ".");
         }
         return resource.getResourceServiceProvider().getResourceValidator().validate(resource, CheckMode.ALL, null);
     }
 
     public PLSQLValidator getValidator() {
-        return this.injector.<PLSQLValidator>getInstance(PLSQLValidator.class);
+        return injector.getInstance(PLSQLValidator.class);
     }
 }
